# memoria-forge

./: .gitattributes  .gitignore  README.md  config.example.json  pyproject.toml  run_agent.py
config/: rss_sources.txt
docs/: AI議論用_自律Wiki構築AI_現状と課題.md
experiments/: __init__.py  gemma_comparison_results.json  model_comparison.py  model_comparison_report.md  model_comparison_results.json  qwen35_comparison_results.json  retrieval_experiment.py  run_benchmark.py
live-vault/: AI構築とリトリバル実験の統合ガイド  AI構築プロセスとリトリバル実験の実装ガイド  AI構築方法とリトリバル実験実装ガイド  AI構築方法の基礎 - 手法・ツール・導入ケース完全ガイド  AI知識構築手順ガイド.md  AI開発とリトリバル実験に関する知識整理  Retrieval Experiment Implementation Guide.md  最新検索実験結果解説.md
live-vault/10_Knowledge/: Uberはなぜ、自律走行車の普及を遅らせる規制を求めるのか？.md  Zettelkasten AI Integration.md  “ローファイ”によるAIへの抵抗.md  「AI軍拡競争」という物語が現実をつくる──元DeepMind幹部が警鐘.md  データ利他主義とプラネタリーヘルス：水野祐が考える新しい社会契約〔あるいはそれに代わる何か〕Vol.md  レストランは、人と土地の健康にどう向き合えるのか──レフェルヴェソンス「Impact Report 2025」が記録する再生の実践.md  植物に電源いらずの“ウェアラブル端末”。水分の状態を感知するセンサーが秘めた可能性.md  眼底から“視野”を読み解き、緑内障の見逃しに挑む：DeepEyeVision.md  自律Wiki構築AI.md  観測史上“最古”のクエーサーが、立て続けに見つかったことの意味.md
live-vault/90_System/Experiments/: Latest Retrieval Experiment.md
scripts/: install_scheduler.ps1  run_scheduled.ps1  status_scheduler.ps1  uninstall_scheduler.ps1
src/: rss_collector.py  wiki_agent.py
src/research/: __init__.py  ddg_client.py  deep_research.py  page_fetcher.py
tasks/: lessons.md  todo.md
tests/: test_agent.py  test_retrieval_experiment.py
