[project]
name = "autonomous-wiki-agent"
version = "0.1.0"
description = "A safe autonomous Obsidian wiki builder backed by Ollama"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "mypy==1.17.1",
    "pytest==8.4.1",
    "ruff==0.12.7",
]
